修改host构造函数，加入连接功能

--- a/Hacknet The Origin/Hacknet The Origin.vcxproj
+++ b/Hacknet The Origin/Hacknet The Origin.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="networkgeneral.cpp" />
     <ClCompile Include="power.cpp" />
     <ClCompile Include="help.cpp" />
     <ClCompile Include="host.cpp" />
