--- a/Hacknet The Origin/Hacknet The Origin.vcxproj
+++ b/Hacknet The Origin/Hacknet The Origin.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="rwopt.cpp" />
     <ClCompile Include="level0.cpp" />
     <ClCompile Include="cmdquery.cpp" />
+    <ClCompile Include="initcomp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addcmd.cpp" />
