--- a/Hacknet The Origin/Hacknet The Origin.vcxproj.filters
+++ b/Hacknet The Origin/Hacknet The Origin.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="源文件\关卡\序章\教程关\level3">
       <UniqueIdentifier>{65ae8802-8019-42d9-97b5-6307199a006f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\初始化">
+      <UniqueIdentifier>{024190ef-41bb-41e5-81c7-22960995e422}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -72,9 +75,6 @@
     <ClCompile Include="cmdquery.cpp">
       <Filter>源文件\命令处理</Filter>
     </ClCompile>
-    <ClCompile Include="initplayercmd.cpp">
-      <Filter>源文件\命令处理</Filter>
-    </ClCompile>
     <ClCompile Include="filegeneral.cpp">
       <Filter>源文件\命令处理\基础命令</Filter>
     </ClCompile>
@@ -92,6 +92,12 @@
     </ClCompile>
     <ClCompile Include="level3.cpp">
       <Filter>源文件\关卡\序章\教程关\level3</Filter>
+    </ClCompile>
+    <ClCompile Include="initplayercmd.cpp">
+      <Filter>源文件\初始化</Filter>
+    </ClCompile>
+    <ClCompile Include="initcomp.cpp">
+      <Filter>源文件\初始化</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
