更新：加入recovery段剧情，调整文件和命令

--- a/Hacknet The Origin/Hacknet The Origin.vcxproj
+++ b/Hacknet The Origin/Hacknet The Origin.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="level4.cpp" />
     <ClCompile Include="level5.cpp" />
     <ClCompile Include="networkgeneral.cpp" />
+    <ClCompile Include="OPAnimation.cpp" />
     <ClCompile Include="power.cpp" />
     <ClCompile Include="help.cpp" />
     <ClCompile Include="host.cpp" />
@@ -156,11 +157,12 @@
     <ClCompile Include="levelSele.cpp" />
     <ClCompile Include="filegeneral.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Animation1.cpp" />
     <ClCompile Include="rwopt.cpp" />
     <ClCompile Include="level0.cpp" />
     <ClCompile Include="cmdquery.cpp" />
     <ClCompile Include="initcomp.cpp" />
+    <ClCompile Include="Animation2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addcmd.cpp" />
