--- a/Hacknet The Origin/Hacknet The Origin.vcxproj.filters
+++ b/Hacknet The Origin/Hacknet The Origin.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="源文件\动画">
       <UniqueIdentifier>{fcc1be2f-b365-4949-8e3c-fa9d83d01e2e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\命令处理\骇入命令">
+      <UniqueIdentifier>{c13aad7f-98ad-46b6-8fb9-589bf82b09d1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -101,6 +104,12 @@
     </ClCompile>
     <ClCompile Include="OPAnimation.cpp">
       <Filter>源文件\动画</Filter>
+    </ClCompile>
+    <ClCompile Include="level6.cpp">
+      <Filter>源文件\关卡\序章\教程关</Filter>
+    </ClCompile>
+    <ClCompile Include="hacknetbuildin.cpp">
+      <Filter>源文件\命令处理\骇入命令</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
