--- a/Hacknet The Origin/Hacknet The Origin.vcxproj
+++ b/Hacknet The Origin/Hacknet The Origin.vcxproj
@@ -143,10 +143,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="68.144.93.18.cpp" />
     <ClCompile Include="level3.cpp" />
     <ClCompile Include="level4.cpp" />
     <ClCompile Include="level5.cpp" />
     <ClCompile Include="level6.cpp" />
+    <ClCompile Include="Level6Comp.cpp" />
+    <ClCompile Include="level7.cpp" />
     <ClCompile Include="networkgeneral.cpp" />
     <ClCompile Include="OPAnimation.cpp" />
     <ClCompile Include="power.cpp" />
@@ -162,9 +165,10 @@
     <ClCompile Include="rwopt.cpp" />
     <ClCompile Include="level0.cpp" />
     <ClCompile Include="cmdquery.cpp" />
-    <ClCompile Include="initcomp.cpp" />
+    <ClCompile Include="Level3Comp.cpp" />
     <ClCompile Include="Animation2.cpp" />
     <ClCompile Include="hacknetbuildin.cpp" />
+    <ClCompile Include="TracedAnimation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addcmd.cpp" />
